--- a/main.html
+++ b/main.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Submit Button with Hover Effect</title>
+    <style>
+        /* Initial State */
+        #btn {
+            background-color: black;
+            color: white;
+            border-radius: 5px;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        /* Hover State */
+        #btn:hover {
+            background-color: yellow;
+            color: black;
+            border-radius: 30px;
+        }
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <form>
+        <button type="submit" id="btn">Submit</button>
+    </form>
 
 </body>
 
