--- a/main.html
+++ b/main.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit Button with Hover Effect</title>
-    <style>
-        /* Initial State */
-        #btn {
-            background-color: black;
-            color: white;
-            border-radius: 5px;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        /* Hover State */
-        #btn:hover {
-            background-color: yellow;
-            color: black;
-            border-radius: 30px;
-        }
-    </style>
+	<link rel="stylesheet" href="styles.css">
+	<style>
+		#btn{
+			background-color:black;
+			color:white;
+			border-radius:5px;
+			border:none;
+		}
+		#btn:hover{
+			background-color:yellow;
+			color:black;
+			border-radius:30px;
+		}
+	</style>
 </head>
 
 <body>
-
-    <form>
-        <button type="submit" id="btn">Submit</button>
-    </form>
+	<button id="btn" type="submit">Submit</button>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
 
 </body>
 
